@@ -14,6 +14,8 @@ update-manager (1:0.125.7) UNRELEASED; urgency=low
       /etc/fstab (LP: #441242) and add tests for it
     - put 386 to generic transition code here and decouple from
       the kernel selection
+    - inhibit gnome-screensaver once the upgrade started 
+      to avoid X crash (LP: #439594)
   * DistUpgrade/DistUpgradeCache.py:
     - workaround issues with kdesu when it drop the permission bits
       in a tmpdir (thanks to Jonathan Riddell)
@@ -25,7 +27,7 @@ update-manager (1:0.125.7) UNRELEASED; urgency=low
     - updated from launchpad (required as during a release upgrade
       we can't use langpacks)
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 30 Sep 2009 13:32:13 +0200
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 08 Oct 2009 17:45:25 +0200
 
 update-manager (1:0.125.6) karmic; urgency=low
 
